manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - image: 89.208.196.40:5000/io.slurm.gitlab.s002922.users_rest_api:1.0.0
        name: python-users-rest-api
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 500Mi
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /users
            port: 8080
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /users
            port: 8080
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
          initialDelaySeconds: 10
        startupProbe:
          httpGet:
            path: /users
            port: 8080
          failureThreshold: 30
          periodSeconds: 10                
      imagePullSecrets:
        - name: regcred
