manifests/mysql-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-headless-service
  labels:
    app: mysql
spec:
  ports:
  - name: mysql
    port: 3306
  clusterIP: None
  selector:
    app: mysql
