manifests/mysql-read-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-read-service
  labels:
    app: mysql
spec:
  ports:
  - name: mysql
    port: 3306
  selector:
    app: mysql
